# Linux_usb-detection_update_system

./: CMakeLists.txt  README.md  UI_Window.h  dynamic_usb  dynamic_usb.cpp  dynamic_usb.h  main.cpp  usb_detector
include/: Logger.h  dynamic_usb.h
src/: Logger.cpp  UI_Window.cpp  dynamic_usb.cpp  main.cpp
